@@ -20,17 +20,39 @@
 package org.apache.cassandra.locator;
 
 import java.net.InetAddress;
-import java.util.Collection;
-import java.util.List;
+import java.util.*;
 
 public abstract class AbstractEndpointSnitch implements IEndpointSnitch
 {
-    public abstract List<InetAddress> getSortedListByProximity(InetAddress address, Collection<InetAddress> unsortedAddress);
-    public abstract void sortByProximity(InetAddress address, List<InetAddress> addresses);
+    public abstract int compareEndpoints(InetAddress target, InetAddress a1, InetAddress a2);
 
-    public int compareEndpoints(InetAddress target, InetAddress a1, InetAddress a2)
+    /**
+     * Sorts the <tt>Collection</tt> of node addresses by proximity to the given address
+     * @param address the address to sort by proximity to
+     * @param unsortedAddress the nodes to sort
+     * @return a new sorted <tt>List</tt>
+     */
+    public List<InetAddress> getSortedListByProximity(InetAddress address, Collection<InetAddress> unsortedAddress)
     {
-        return a1.getHostAddress().compareTo(a2.getHostAddress());
+        List<InetAddress> preferred = new ArrayList<InetAddress>(unsortedAddress);
+        sortByProximity(address, preferred);
+        return preferred;
+    }
+
+    /**
+     * Sorts the <tt>List</tt> of node addresses, in-place, by proximity to the given address
+     * @param address the address to sort the proximity by
+     * @param addresses the nodes to sort
+     */
+    public void sortByProximity(final InetAddress address, List<InetAddress> addresses)
+    {
+        Collections.sort(addresses, new Comparator<InetAddress>()
+        {
+            public int compare(InetAddress a1, InetAddress a2)
+            {
+                return compareEndpoints(address, a1, a2);
+            }
+        });
     }
 
     public void gossiperStarting()
